# myapplication

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/fangsheng/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/fangsheng/myapplication/: Constants.java  DecoratorTestActivity.java  GroupUserIdentityModel.java  MainActivity.java
app/src/main/java/com/example/fangsheng/myapplication/ShortcutBadger/: ShortcutBadgerUtils.java
app/src/main/java/com/example/fangsheng/myapplication/appops/: AppOpsUtil.java
app/src/main/java/com/example/fangsheng/myapplication/asynclayout/: AsyncLayoutActivity.java
app/src/main/java/com/example/fangsheng/myapplication/baidupic/: BaiduConstants.java  BaiduPicListAdapter.java  BaiduPicSearchJsoupParser.java  BaiduPicSearchProcessor.java  BaiduPicSearchTextParser.java  GetResultListener.java  IPicSearchProcessor.java  PicDisplayActivity.java
app/src/main/java/com/example/fangsheng/myapplication/circleprogressbar/: CircleProgressBar.java
app/src/main/java/com/example/fangsheng/myapplication/decorate/: DecorateBuilder.java  DecorateHelper.java
app/src/main/java/com/example/fangsheng/myapplication/decorate/decorator/: BaseDecorator.java  TestBaseDecorator.java  TestChildDecorator.java
app/src/main/java/com/example/fangsheng/myapplication/dingtalkrobot/: DingtalkMessageActivity.java  DingtalkRobotProcessor.java  RobotConstants.java  RobotParam.java
app/src/main/java/com/example/fangsheng/myapplication/floatview/: FloatView.java
app/src/main/java/com/example/fangsheng/myapplication/image/: AffineConstants.java  ImageAffineTransform.java  ImageCutActivity.java  ImagePopActivity.java
app/src/main/java/com/example/fangsheng/myapplication/image/affine/: AffineUtils.java
app/src/main/java/com/example/fangsheng/myapplication/jni/: XJni.java
app/src/main/java/com/example/fangsheng/myapplication/jnidemo/: JniDemoActivity.java  JniJavaObj.java
app/src/main/java/com/example/fangsheng/myapplication/loadclass/: DynClassTest.java
app/src/main/java/com/example/fangsheng/myapplication/model/: BaseModel.java  Contact.java  ImMessage.java  ImMessageKey.java  SimpleData.java
app/src/main/java/com/example/fangsheng/myapplication/notification/: AgooNotification.java  AgooNotificationFactory.java  AgooNotificationManger.java  AgooPersonalNotification.java  AgooSystemNotification.java  MsgNotficationDTO.java
app/src/main/java/com/example/fangsheng/myapplication/remote/: RemoteBusiness.java  RemoteResult.java
app/src/main/java/com/example/fangsheng/myapplication/shadow/: ShadowImageActivity.java
app/src/main/jni/: XJni.c  com_example_fangsheng_myapplication_jnidemo_JniDemoActivity.h  jniDemo.c  jniDemo.cpp
app/src/main/res/layout/: activity_asynclayout.xml  activity_dingtalk_message.xml  activity_image_cut.xml  activity_image_pop.xml  activity_image_shadow.xml  activity_jnidemo.xml  activity_main.xml  activity_main2.xml  activity_pic_display.xml  float_view.xml  personal_msg_default.xml  pic_display_list_item.xml
app/src/main/res/values/: atrrs.xml  colors.xml  strings.xml
app/src/main/res/values-w820dp/: styles.xml
app/src/test/java/com/example/fangsheng/myapplication/: ExampleUnitTest.java
(+76 files in other folders)
